# late-sh

./: .gitguardian.yaml  .gitignore  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DOOR.md  DOOR_DOPEWARS_PREP.md  DRAGON.md  Dockerfile  GAMES.md  Makefile  README.md  UP.md  default.nix  docker-compose.check.yml  docker-compose.yml  flake.nix  theme.rs
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  deploy.yml  deploy_cli.yml  deploy_dopewars.yml  deploy_infra.yml  deploy_nethack.yml  deploy_web.yml  dopewars.yml  terraform.yml
assets/dragon/: README.md
assets/dragon/dats/: README.md
assets/dragon/reference/: lord-data-map.md  native-design-musts.md  roadmap.md  source-provenance.md
devdocs/: FRD-DAILY.md  FRD-IRCD.md  SOCIAL.md  TODO-IRCD.md
infra/: README.md  cloudnativepg.tf  defaults.tf  dopewars.tf  icecast.tf  irc.tf  liquidsoap.tf  livekit.tf  secrets.tf  service-dopewars.tf  service-nethack.tf  service-ssh.tf  service-web.tf  ssh-tcp.tf  variables.tf
infra/icecast/: icecast.xml
infra/liquidsoap/: fetch_mp3s.py  radio.liq
late-cli/: CONTEXT.md  Cargo.toml  README.md
late-cli/src/: config.rs  identity.rs  main.rs  ssh.rs  voice.rs  ws.rs
late-cli/src/audio/: decoder.rs  decoder_thread.rs  mod.rs  output.rs
late-cli/src/webview/: mod.rs  page.html  pair.rs
late-core/: Cargo.toml
late-core/migrations/: 056_seed_badge_shop.sql  057_delete_room_seat_announcements.sql  069_seed_flag_badges.sql  072_create_mud_world_states.sql  083_create_irc_tokens.sql  084_create_voice_channels.sql  087_create_le_word.sql  090_create_racer.sql  090_create_traffic.sql  092_create_greendragon_characters.sql  093_add_chat_message_reply_to_user.sql  094_create_user_drinks.sql  095_create_chat_slow_modes.sql  096_create_greendragon_news.sql  096_create_tickets.sql  097_create_greendragon_settings.sql  098_create_greendragon_commentary.sql  099_create_greendragon_bounties.sql  100_seed_greendragon_dragon_reward.sql  101_create_greendragon_clans.sql  102_create_daily_matches.sql  103_fix_companion_shop_copy.sql  104_retire_bot_username_color.sql  105_seed_daily_battleship_reward.sql  105_seed_ssnake_reward.sql  106_seed_daily_connect4_reward.sql  107_fix_chat_slow_modes_server_scope.sql  108_add_daily_result_seen.sql  112_seed_username_effects.sql  113_create_rubiks_cube_games.sql
late-core/src/: api_types.rs  icecast.rs  test_utils.rs
late-core/src/models/: account_link.rs  artboard.rs  article_feed_read.rs  asterion.rs  chat_message.rs  chat_room.rs  chat_room_member.rs  chat_slow_mode.rs  chips.rs  daily_match.rs  drinks.rs  game_room.rs  greendragon_bounty.rs  greendragon_character.rs  greendragon_clan.rs  greendragon_commentary.rs  greendragon_news.rs  greendragon_setting.rs  irc_token.rs  le_word.rs  leaderboard.rs  marketplace.rs  mod.rs  mud_character.rs  mud_world_state.rs  profile.rs  profile_award.rs  racer.rs  reward.rs  rss_entry.rs  rubiks_cube.rs  shop_consumable_effect.rs  ticket.rs  traffic.rs  user.rs  username_effect.rs  voice_channel.rs
late-core/tests/: artboard_snapshot.rs  drinks.rs  game_room.rs  le_word.rs  marketplace.rs  rss_feed_read.rs
late-dopewars/: Cargo.toml
late-dopewars/src/: config.rs  host.rs  identity.rs  main.rs  server.rs
late-nethack/: Cargo.toml
late-nethack/src/: host.rs  identity.rs  main.rs  server.rs
late-ssh/: Cargo.toml
late-ssh/assets/aquarium/: config.kdl
late-ssh/assets/le_word/: answer_pool.txt  valid_extra.txt
late-ssh/assets/splash_tips/: new_and_returning_users_tip_pool.json  returning_users_tip_pool.json
late-ssh/assets/ssnake_levels/: README.md  level_01.txt  level_02.txt  level_03.txt  level_04.txt  level_05.txt  level_06.txt  level_07.txt  level_08.txt  level_09.txt  level_10.txt  level_11.txt  level_12.txt  level_13.txt  level_14.txt  level_15.txt  level_16.txt  level_17.txt  level_18.txt  level_19.txt  level_20.txt
late-ssh/src/: api.rs  config.rs  dartboard.rs  lib.rs  main.rs  metrics.rs  paired_clients.rs  session.rs  session_bootstrap.rs  ssh.rs  state.rs  terminal_size.rs  web_tunnel.rs
late-ssh/src/app/: input.rs  mod.rs  render.rs  (+2 more)
late-ssh/tests/: app_dashboard_flow.rs  app_input_flow.rs  app_smoke.rs  audio_queue_reconcile.rs  ssh_smoke.rs
late-web/: CONTEXT.md
late-web/static/: style.css
late-web/tests/: dashboard.rs  stream.rs
late-webview/: Cargo.toml
late-webview/src/: lib.rs  main.rs  pair.rs
scripts/: dump_chat_room.sh  gen_clubhouse_map.py  install.sh  run_local_cli.sh  run_local_cli_native.sh  run_local_cli_native_user.sh  run_prod_cli.sh  run_prod_cli_native.sh
(+383 files in other folders)
