[package]
name = "late-cli"
version = "0.1.0"
edition = "2024"

[features]
default = []
otel = []

[[bin]]
name = "late"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cpal.workspace = true
crossterm.workspace = true
futures-util.workspace = true
getrandom.workspace = true
rand_core.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
ringbuf.workspace = true
russh.workspace = true
rustls.workspace = true
rustfft.workspace = true
shlex.workspace = true
symphonia = { workspace = true, features = ["mp3"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["term", "process", "signal", "fs"] }

# Embedded webview for CLI-side YouTube (see late-ssh/src/app/audio/CONTEXT.md §17).
# In-process on Windows/macOS only, where the system webview has no load-time
# dependency risk. On Linux the CLI spawns the standalone `late-webview`
# helper binary instead, so `late` itself must never link WebKitGTK/GTK —
# a host without the webview stack still has to run the CLI.
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
late-webview = { path = "../late-webview" }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
arboard.workspace = true
image.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
livekit.workspace = true
