[package]
name = "late-dopewars"
version = "0.1.0"
edition = "2024"

# Standalone host for the dopewars door game. Runs the real upstream dopewars
# curses client on a PTY and exposes it over SSH, so late-ssh reaches it as a
# network-proxied door (the same shape as the nethack host) instead of spawning
# a local child. See late-ssh/src/app/door/dopewars/CONTEXT.md.

[[bin]]
name = "late-dopewars"
path = "src/main.rs"

[features]
# No-op: CI builds/tests the workspace with `--features otel`, which requires
# every member to define the feature. This host has no telemetry deps of its own
# (it logs via tracing-subscriber fmt), so `otel` is a no-op here. Wire real OTLP
# exporters in if host-side traces/metrics are ever wanted.
otel = []

[dependencies]
# Core Utils
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async / Runtime
tokio = { workspace = true }

# SSH transport
russh = { workspace = true }

# Identity: shared-secret -> derived ed25519 client key (mirrors the nethack host)
blake3 = { workspace = true }

# Server host-key generation (matches late-ssh's RNG usage)
getrandom = { workspace = true }

# PTY allocation for the dopewars child (openpty/setsid/TIOCSWINSZ). This is a
# Linux-only host (it serves a PTY-bound game), so nix is an unconditional dep.
# Unlike the nethack host there is no `signal` feature: dopewars has no
# hangup-save, so teardown is a plain kill rather than a SIGHUP dance.
nix = { workspace = true, features = ["term", "process"] }
