[package]
name = "late-webview"
version = "0.1.0"
edition = "2024"

# Embedded webview for CLI-side YouTube (see late-ssh/src/app/audio/CONTEXT.md §17).
#
# This crate exists so the `late` binary does not link WebKitGTK/GTK on Linux:
# missing webview libraries must never stop the CLI itself from starting. On
# Linux the `late-webview` binary is shipped next to `late` and spawned on
# demand; on Windows/macOS `late` embeds this crate as a library because the
# system webview (WebView2/WKWebView) carries no load-time dependency risk.
#
# Linux requires WebKitGTK 4.1 dev/runtime packages plus GStreamer plugins
# including gst-plugins-good (`autoaudiosink`) for media playback.

[[bin]]
name = "late-webview"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util.workspace = true
rustls.workspace = true
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
wry = "0.55"
tao = "0.34"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "=2.0.2", features = ["v2_38"] }
